@@ -5,6 +5,9 @@ import lombok.extern.slf4j.Slf4j;
 import org.naukma.spring.modulith.analytics.AnalyticsEvent;
 import org.naukma.spring.modulith.analytics.AnalyticsEventType;
 import org.naukma.spring.modulith.analytics.AnalyticsService;
+import org.naukma.spring.modulith.booking.BookingException;
+import org.naukma.spring.modulith.payment.PaymentGrpcClient;
+import org.naukma.spring.modulith.payment.RefundData;
 import org.naukma.spring.modulith.user.DeletedUserEvent;
 import org.naukma.spring.modulith.user.UserDto;
 import org.naukma.spring.modulith.user.UserMapper;
@@ -15,9 +18,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @Slf4j
 @Service
@@ -28,8 +29,11 @@ public class EventService {
     private final AnalyticsService analyticsService;
     private final UserService userService;
 
+    private final PaymentGrpcClient paymentGrpcClient;
+    private static final Random RANDOM = new Random();
+
     public List<EventDto> getAll() {
-        return eventRepository.findAll().stream().map(EventMapper.INSTANCE::entityToDto).collect(Collectors.toList());
+        return eventRepository.findAll().stream().map(EventMapper.INSTANCE::entityToDto).toList();
     }
 
     @Transactional
@@ -48,7 +52,7 @@ public class EventService {
     @Transactional
     public EventDto updateEvent(EventDto event) {
         EventEntity eventEntity = eventRepository.findById(event.getId())
-                .orElseThrow(() -> new EventNotFoundException("Event not found with ID: " + event.getId()));
+                .orElseThrow(() -> new EventNotFoundException(event.getId()));
         eventEntity.setCapacity(event.getCapacity());
         eventEntity.setDescription(event.getDescription());
         eventEntity.setCaption(event.getCaption());
@@ -62,32 +66,86 @@ public class EventService {
     }
 
 
-    public void deleteEvent(Long eventId) {
-        if (eventRepository.existsById(eventId)) {
+    public String deleteEvent(Long eventId) {
+        Optional<EventEntity> eventOptional = eventRepository.findById(eventId);
+
+        if (eventOptional.isPresent()) {
+            EventEntity eventToDelete = eventOptional.get();
             eventRepository.deleteById(eventId);
             eventPublisher.publishEvent(new DeletedEventEvent(eventId));
             log.info("Deleted event with ID: {}", eventId);
+
+            if (eventToDelete.getPrice() > 0 && !eventToDelete.getParticipants().isEmpty()) {
+                returnPayment(EventMapper.INSTANCE.entityToDto(eventToDelete).getParticipants(), eventToDelete.getPrice());
+                return "Event deleted successfully! Refund started, check logs for update";
+            }
+
+            return "Event deleted successfully!";
         } else {
             log.warn("Event not found for deletion with ID: {}", eventId);
+            throw new EventNotFoundException();
         }
     }
 
+    private void returnPayment(List<UserDto> participants, float refundSum) {
+        List<RefundData> refunds = new ArrayList<>();
 
-    public void addParticipant(Long eventId, UserDto user) {
+        for (UserDto user : participants) {
+            long paymentId = RANDOM.nextLong();
+            String timestamp = java.time.Instant.now().toString();
+
+            refunds.add(new RefundData(paymentId, refundSum, timestamp));
+            log.info("Prepared refund for user: {} with refund sum: {}", user.getId(), refundSum);
+        }
+
+        paymentGrpcClient.streamPaymentReturn(refunds);
+    }
+
+    public String addParticipant(Long eventId, UserDto user) {
         EventEntity event = eventRepository.findById(eventId)
-                .orElseThrow(() -> new EventNotFoundException("Event not found with ID: " + eventId));
+                .orElseThrow(() -> new EventNotFoundException(eventId));
+        if (event.getParticipants().contains(UserMapper.INSTANCE.dtoToEntity(user))) {
+            throw new BookingException("Cannot add participant. User is already registered for the event with ID: " + eventId);
+        }
         event.getParticipants().add(UserMapper.INSTANCE.dtoToEntity(user));
         eventRepository.save(event);
+
+        if (event.getPrice() > 0) {
+            String message = processPaymentForEvent(EventMapper.INSTANCE.entityToDto(event));
+            return "Registration for event: " + message;
+        }
+
+        return "User registered for the event successfully!";
     }
 
+    private String processPaymentForEvent(EventDto event) {
+        long userId = event.getOrganiser().getId();
+        long eventId = event.getId();
+        float price = event.getPrice();
+        String paymentMethod = "CreditCard";
+        String timestamp = java.time.Instant.now().toString();
 
-    public void removeParticipant(Long eventId, UserDto user) {
+        String paymentResponse = paymentGrpcClient.processPayment(userId, eventId, price, paymentMethod, timestamp);
+        log.info("Payment processing result for event {}: {}", eventId, paymentResponse);
+        return paymentResponse;
+    }
+
+    public String removeParticipant(Long eventId, UserDto user) {
         EventEntity event = eventRepository.findById(eventId)
-                .orElseThrow(() -> new EventNotFoundException("Event not found with ID: " + eventId));
+                .orElseThrow(() -> new EventNotFoundException(eventId));
+        if (!event.getParticipants().contains(UserMapper.INSTANCE.dtoToEntity(user))) {
+            throw new BookingException("Cannot remove participant. User is not registered for the event with ID: " + eventId);
+        }
         event.getParticipants().remove(UserMapper.INSTANCE.dtoToEntity(user));
         eventRepository.save(event);
-    }
 
+        if (event.getPrice() > 0) {
+            returnPayment(List.of(user), event.getPrice());
+            return "User unregistered from the event successfully! Refund started, check logs for update";
+        }
+
+        return "User unregistered from the event successfully!";
+    }
 
     public List<EventDto> findAllByOrganiserId(Long organiserId) {
         List<EventEntity> events = eventRepository.findAllByOrganiserId(organiserId);
@@ -96,7 +154,7 @@ public class EventService {
             return Collections.emptyList();
         }
         log.info("Retrieved {} events for organiser ID: {}", events.size(), organiserId);
-        return events.stream().map(EventMapper.INSTANCE::entityToDto).collect(Collectors.toList());
+        return events.stream().map(EventMapper.INSTANCE::entityToDto).toList();
     }
 
     @EventListener
@@ -117,12 +175,12 @@ public class EventService {
             return Collections.emptyList();
         }
         log.info("Retrieved {} events for participant ID: {}", events.size(), id);
-        return events.stream().map(EventMapper.INSTANCE::entityToDto).collect(Collectors.toList());
+        return events.stream().map(EventMapper.INSTANCE::entityToDto).toList();
     }
 
     public EventDto getEventById(Long eventId) {
         EventEntity event = eventRepository.findById(eventId)
-                .orElseThrow(() -> new EventNotFoundException("Event not found with ID: " + eventId));
+                .orElseThrow(() -> new EventNotFoundException(eventId));
         log.info("Retrieved event with ID: {}", event.getId());
         return EventMapper.INSTANCE.entityToDto(event);
     }
